--- a/blogen-admin-ui/details.html
+++ b/blogen-admin-ui/details.html
@@ -9,9 +9,8 @@
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <script src="https://cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Blogen Admin</title>
+  <title>Bootstrap Theme</title>
 </head>
 
 <body>
@@ -24,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="index.html" class="nav-link active">Dashboard</a>
+            <a href="index.html" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item px-2">
             <a href="posts.html" class="nav-link">Posts</a>
@@ -67,7 +66,7 @@
       <div class="row">
         <div class="col-md-6">
           <h1>
-            <i class="fas fa-cog"></i> Dashboard</h1>
+            Post One</h1>
         </div>
       </div>
     </div>
@@ -78,142 +77,62 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <a href="#" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addPostModal">
-            <i class="fas fa-plus"></i> Add Post
+          <a href="index.html" class="btn btn-light btn-block">
+            <i class="fas fa-arrow-left"></i> Back To Dashboard
           </a>
         </div>
         <div class="col-md-3">
-          <a href="#" class="btn btn-success btn-block" data-toggle="modal" data-target="#addCategoryModal">
-            <i class="fas fa-plus"></i> Add Category
+          <a href="index.html" class="btn btn-success btn-block">
+            <i class="fas fa-check"></i> Save Changes
           </a>
         </div>
         <div class="col-md-3">
-          <a href="#" class="btn btn-warning btn-block" data-toggle="modal" data-target="#addUserModal">
-            <i class="fas fa-plus"></i> Add User
+          <a href="index.html" class="btn btn-danger btn-block">
+            <i class="fas fa-trash"></i> Delete Post
           </a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- POSTS -->
-  <section id="posts">
+  <!-- DETAILS -->
+  <section id="details">
     <div class="container">
       <div class="row">
-        <div class="col-md-9">
+        <div class="col">
           <div class="card">
             <div class="card-header">
-              <h4>Latest Posts</h4>
+              <h4>Edit Post</h4>
             </div>
-            <table class="table table-striped">
-              <thead class="thead-dark">
-                <tr>
-                  <th>#</th>
-                  <th>Title</th>
-                  <th>Category</th>
-                  <th>Date</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Post One</td>
-                  <td>Category 4</td>
-                  <td>May 10 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Post Two</td>
-                  <td>Category 2</td>
-                  <td>May 11 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Post Three</td>
-                  <td>Category 4</td>
-                  <td>May 13 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Post Four</td>
-                  <td>Category 1</td>
-                  <td>May 15 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Post Five</td>
-                  <td>Category 3</td>
-                  <td>May 17 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>Post Six</td>
-                  <td>Category 3</td>
-                  <td>May 20 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card text-center bg-primary text-white mb-3">
             <div class="card-body">
-              <h3>Posts</h3>
-              <h4 class="display-4">
-                <i class="fas fa-pencil-alt"></i> 6
-              </h4>
-              <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
-            </div>
-          </div>
-
-          <div class="card text-center bg-success text-white mb-3">
-            <div class="card-body">
-              <h3>Categories</h3>
-              <h4 class="display-4">
-                <i class="fas fa-folder"></i> 4
-              </h4>
-              <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
-            </div>
-          </div>
-
-          <div class="card text-center bg-warning text-white mb-3">
-            <div class="card-body">
-              <h3>Users</h3>
-              <h4 class="display-4">
-                <i class="fas fa-users"></i> 4
-              </h4>
-              <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
+              <form>
+                <div class="form-group">
+                  <label for="title">Title</label>
+                  <input type="text" class="form-control" value="Post One">
+                </div>
+                <div class="form-group">
+                  <label for="category">Category</label>
+                  <select class="form-control">
+                    <option value="" selected>Category 1</option>
+                    <option value="">Category 2</option>
+                    <option value="">Category 3</option>
+                    <option value="">Category 4</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="image">Upload Image</label>
+                  <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="image">
+                    <label for="image" class="custom-file-label">Choose File</label>
+                  </div>
+                  <small class="form-text text-muted">Max Size 3mb</small>
+                </div>
+                <div class="form-group">
+                  <label for="body">Body</label>
+                  <textarea name="editor1"
+                    class="form-control">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat culpa nam cumque voluptatum. Possimus recusandae porro architecto officiis illo dignissimos ratione aut officia reprehenderit! Iure cum numquam fugit doloremque quis ullam illo odit, odio voluptates non quisquam laboriosam consectetur quasi perspiciatis! Sapiente minus aperiam nobis molestias autem ut praesentium laudantium?</textarea>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -239,7 +158,7 @@
 
   <!-- MODALS -->
 
-  <!-- POST MODAL -->
+  <!--  POST MODAL -->
   <div class="modal fade" id="addPostModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -258,10 +177,10 @@
             <div class="form-group">
               <label for="category">Category</label>
               <select class="form-control">
-                <option value="">Category 1</option>
-                <option value="">Category 2</option>
-                <option value="">Category 3</option>
-                <option value="">Category 4</option>
+                <option value="">Web Development</option>
+                <option value="">Tech Gadgets</option>
+                <option value="">Business</option>
+                <option value="">Health & Wellness</option>
               </select>
             </div>
             <div class="form-group">
@@ -274,7 +193,7 @@
             </div>
             <div class="form-group">
               <label for="body">Body</label>
-              <textarea name="texteditor" id="texteditor" rows="10" cols="80" class="form-control"></textarea>
+              <textarea name="editor1" class="form-control"></textarea>
             </div>
           </form>
         </div>
@@ -285,7 +204,7 @@
     </div>
   </div>
 
-  <!-- CATEGORY MODAL -->
+  <!--  CATEGORY MODAL -->
   <div class="modal fade" id="addCategoryModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -310,7 +229,7 @@
     </div>
   </div>
 
-  <!-- USER MODAL -->
+  <!--  USER MODAL -->
   <div class="modal fade" id="addUserModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -347,6 +266,7 @@
     </div>
   </div>
 
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -355,12 +275,13 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
     integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+  <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
+
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
 
-    CKEDITOR.replace('texteditor');
+    CKEDITOR.replace('editor1');
   </script>
 </body>
 
