--- a/blogen-admin-ui/profile.html
+++ b/blogen-admin-ui/profile.html
@@ -9,9 +9,8 @@
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <script src="https://cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Blogen Admin</title>
+  <title>Bootstrap Theme</title>
 </head>
 
 <body>
@@ -24,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="index.html" class="nav-link active">Dashboard</a>
+            <a href="index.html" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item px-2">
             <a href="posts.html" class="nav-link">Posts</a>
@@ -67,7 +66,7 @@
       <div class="row">
         <div class="col-md-6">
           <h1>
-            <i class="fas fa-cog"></i> Dashboard</h1>
+            <i class="fas fa-user"></i> Edit Profile</h1>
         </div>
       </div>
     </div>
@@ -78,144 +77,57 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <a href="#" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addPostModal">
-            <i class="fas fa-plus"></i> Add Post
+          <a href="index.html" class="btn btn-light btn-block">
+            <i class="fas fa-arrow-left"></i> Back To Dashboard
           </a>
         </div>
         <div class="col-md-3">
-          <a href="#" class="btn btn-success btn-block" data-toggle="modal" data-target="#addCategoryModal">
-            <i class="fas fa-plus"></i> Add Category
+          <a href="#" class="btn btn-success btn-block">
+            <i class="fas fa-lock"></i> Change Password
           </a>
         </div>
         <div class="col-md-3">
-          <a href="#" class="btn btn-warning btn-block" data-toggle="modal" data-target="#addUserModal">
-            <i class="fas fa-plus"></i> Add User
+          <a href="#" class="btn btn-danger btn-block">
+            <i class="fas fa-trash"></i> Delete Account
           </a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- POSTS -->
-  <section id="posts">
+  <!-- PROFILE -->
+  <section id="profile">
     <div class="container">
       <div class="row">
         <div class="col-md-9">
           <div class="card">
             <div class="card-header">
-              <h4>Latest Posts</h4>
+              <h4>Edit Profile</h4>
             </div>
-            <table class="table table-striped">
-              <thead class="thead-dark">
-                <tr>
-                  <th>#</th>
-                  <th>Title</th>
-                  <th>Category</th>
-                  <th>Date</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Post One</td>
-                  <td>Category 4</td>
-                  <td>May 10 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Post Two</td>
-                  <td>Category 2</td>
-                  <td>May 11 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Post Three</td>
-                  <td>Category 4</td>
-                  <td>May 13 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Post Four</td>
-                  <td>Category 1</td>
-                  <td>May 15 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Post Five</td>
-                  <td>Category 3</td>
-                  <td>May 17 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>Post Six</td>
-                  <td>Category 3</td>
-                  <td>May 20 2018</td>
-                  <td>
-                    <a href="details.html" class="btn btn-secondary">
-                      <i class="fas fa-angle-double-right"></i> Details
-                    </a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="card-body">
+              <form>
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" class="form-control" value="Brad Traversy">
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" value="test@test.com">
+                </div>
+                <div class="form-group">
+                  <label for="bio">Bio</label>
+                  <textarea class="form-control"
+                    name="editor1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid unde at fugiat explicabo temporibus, tempora animi sunt iusto quod beatae optio veritatis velit natus odit error! Possimus esse quisquam quibusdam eveniet autem! Minus dolore quisquam nemo similique doloribus perspiciatis tempore.</textarea>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card text-center bg-primary text-white mb-3">
-            <div class="card-body">
-              <h3>Posts</h3>
-              <h4 class="display-4">
-                <i class="fas fa-pencil-alt"></i> 6
-              </h4>
-              <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
-            </div>
-          </div>
-
-          <div class="card text-center bg-success text-white mb-3">
-            <div class="card-body">
-              <h3>Categories</h3>
-              <h4 class="display-4">
-                <i class="fas fa-folder"></i> 4
-              </h4>
-              <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
-            </div>
-          </div>
-
-          <div class="card text-center bg-warning text-white mb-3">
-            <div class="card-body">
-              <h3>Users</h3>
-              <h4 class="display-4">
-                <i class="fas fa-users"></i> 4
-              </h4>
-              <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
-            </div>
-          </div>
+          <h3>Your Avatar</h3>
+          <img src="img/avatar.png" alt="" class="d-block img-fluid mb-3">
+          <button class="btn btn-primary btn-block">Edit Image</button>
+          <button class="btn btn-danger btn-block">Delete Image</button>
         </div>
       </div>
     </div>
@@ -239,7 +151,7 @@
 
   <!-- MODALS -->
 
-  <!-- POST MODAL -->
+  <!-- ADD POST MODAL -->
   <div class="modal fade" id="addPostModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -258,10 +170,10 @@
             <div class="form-group">
               <label for="category">Category</label>
               <select class="form-control">
-                <option value="">Category 1</option>
-                <option value="">Category 2</option>
-                <option value="">Category 3</option>
-                <option value="">Category 4</option>
+                <option value="">Web Development</option>
+                <option value="">Tech Gadgets</option>
+                <option value="">Business</option>
+                <option value="">Health & Wellness</option>
               </select>
             </div>
             <div class="form-group">
@@ -274,7 +186,7 @@
             </div>
             <div class="form-group">
               <label for="body">Body</label>
-              <textarea name="texteditor" id="texteditor" rows="10" cols="80" class="form-control"></textarea>
+              <textarea name="editor1" class="form-control"></textarea>
             </div>
           </form>
         </div>
@@ -285,7 +197,7 @@
     </div>
   </div>
 
-  <!-- CATEGORY MODAL -->
+  <!-- ADD CATEGORY MODAL -->
   <div class="modal fade" id="addCategoryModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -310,7 +222,7 @@
     </div>
   </div>
 
-  <!-- USER MODAL -->
+  <!-- ADD USER MODAL -->
   <div class="modal fade" id="addUserModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -347,6 +259,7 @@
     </div>
   </div>
 
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -355,12 +268,13 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
     integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+  <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
+
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
 
-    CKEDITOR.replace('texteditor');
+    CKEDITOR.replace('editor1');
   </script>
 </body>
 
